src/CSS/MovieCard.css
.card-image {
  margin: 0 4px;
  padding: 10px;	
	transition-duration:0.3s;	
	cursor:pointer;
  height: 300px;
}

.card-image:hover {
  box-shadow: 8px 8px 5px rgb(247, 182, 17);
  margin: 5 4px;
  padding: 0;	
	transition-duration:0.2s;	
	cursor:pointer;
  height: 310px;
}

.card {
  font-family: 'Sawarabi Gothic', sans-serif;
  color: white;
  padding-bottom: 15%;
  padding-top: 15%;
}

.info-box{
  display: flex;
  flex-direction: column;
  align-items: center;
}

p {
  margin: 0;
}

